[package]
name = "ghost2zola"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.33"
bzip2 = "0.4.1"
chrono = { version = "0.4.19", features = [ "serde" ] }
libflate = "1.0.2"
log = "0.4.11"
pretty_env_logger = "0.4.0"
rusqlite = { version = "0.24.1", features = [ "bundled", "chrono" ] }
serde = { version = "1.0.117", features = [ "derive" ] }
structopt = "0.3.20"
tar = "0.4.30"
tempfile = "3.1.0"
thiserror = "1.0.21"
toml = "0.5.7"
tree_magic = "0.2.3"
