[package]
name = "ghost2zola"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.33"
bzip2 = "0.4.1"
chrono = { version = "0.4.19", features = [ "serde" ] }
lazy_static = "1.4.0"
libflate = "1.0.2"
log = "0.4.11"
path-absolutize = "3.0.6"
pretty_env_logger = "0.4.0"
regex = "1.4.1"
rusqlite = { version = "0.24.1", features = [ "bundled", "chrono" ] }
serde = { version = "1.0.117", features = [ "derive" ] }
slugify = "0.1.0"
structopt = "0.3.20"
tar = "0.4.30"
tempfile = "3.1.0"
thiserror = "1.0.21"
toml = "0.5.7"
tree_magic = "0.2.3"
uuid = { version = "0.8.1", features = [ "v4" ] }
